# edge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  main.cpp
edge/core/gfx/: CMakeLists.txt  context.h  gfx_base.h  gfx_context.cpp  gfx_context.h  gfx_enum.h  gfx_imgui_pass.cpp  gfx_imgui_pass.h  gfx_renderer.cpp  gfx_renderer.h  gfx_resource_updater.cpp  gfx_resource_updater.h  gfx_resource_uploader.cpp  gfx_resource_uploader.h  gfx_shader_effect.h  gfx_shader_library.cpp  gfx_shader_library.h  gfx_shader_pass.h  gfx_structures.h  gfx_test_pass.cpp  gfx_test_pass.h
edge/core/platform/: CMakeLists.txt  android_context.cpp  android_context.h  android_frame_handler.cpp  android_frame_handler.h  android_input.cpp  android_input.h  android_jni_helper.cpp  android_jni_helper.h  android_window.cpp  android_window.h  desktop_input.cpp  desktop_input.h  desktop_window.cpp  desktop_window.h  entry_point.h  frame_handler.h  generic_frame_handler.cpp  linux_context.cpp  linux_context.h  platform.cpp  platform.h  platform_definitioin.h  unix_filesystem.cpp  unix_filesystem.h  windows_context.cpp  windows_context.h  windows_filesystem.cpp  windows_filesystem.h  windows_frame_handler.cpp  windows_frame_handler.h  zip_filesystem.cpp  zip_filesystem.h
engine/: CMakeLists.txt  engine.h  event_dispatcher.c  event_dispatcher.cpp  event_dispatcher.h  gfx_context.c  gfx_context.cpp  gfx_context.h  gfx_enum.h  gfx_interface.h  gfx_renderer.c  gfx_renderer.cpp  gfx_renderer.h  gfx_uploader.cpp  gfx_uploader.h  imgui_layer.cpp  imgui_layer.h  main.c  main.cpp  main.h
engine/graphics/: gfx_context.cpp  gfx_context.h  gfx_interface.h  gfx_renderer.cpp  gfx_renderer.h  gfx_uploader.cpp  gfx_uploader.h
engine/graphics/renderers/: imgui_renderer.cpp  imgui_renderer.h
engine/graphics/shading/: interop.h
engine/imgui/: CMakeLists.txt  imgui.slang  imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h  imgui_shdr.h
engine/resources/: CMakeLists.txt  texture_source.cpp  texture_source.h
engine/resources/dxgi/: dxgiformat.h
engine/resources/gl/: glcorearb.h
engine/runtime/: CMakeLists.txt  android_platform.cpp  android_runtime.cpp  desktop_runtime.cpp  desktop_window.c  desktop_window.cpp  input.h  input_events.c  input_events.cpp  input_events.h  input_system.cpp  input_system.h  platform.h  platform_windows.c  runtime.h  window_events.cpp  window_events.h  windows_platform.c  windows_platform.cpp
engine/shading/: interop.h
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt
lib/base/examples/: CMakeLists.txt  benchmark.cpp  containers_test.c  containers_test.cpp  random_test.c
lib/base/include/: allocator.hpp  arena.hpp  array.hpp  bitarray.hpp  buffer.hpp  callable.hpp  edge_allocator.h  edge_arena.h  edge_base.h  edge_bitarray.h  edge_cpu_detect.h  edge_free_index_list.h  edge_handle_pool.h  edge_hash.h  edge_hashmap.h  edge_list.h  edge_math.h  edge_mpmc_queue.h  edge_platform_detect.h  edge_queue.h  edge_rng.h  edge_stack.h  edge_string.h  edge_testing.h  edge_threads.h  edge_threads_ext.h  edge_uuid.h  edge_vector.h  edge_vmem.h  enumerator.hpp  filesystem.hpp  free_index_list.hpp  handle_pool.hpp  hash.hpp  hashmap.hpp  json.hpp  list.hpp  math.hpp  mpmc_queue.hpp  platform_detect.hpp  (+10 more)
lib/base/src/: arena.cpp  edge_allocator.c  edge_arena.c  edge_cpu_detect.c  edge_free_index_list.c  edge_handle_pool.c  edge_hash.c  edge_hashmap.c  edge_list.c  edge_mpmc_queue.c  edge_queue.c  edge_rng.c  edge_stack.c  edge_string.c  edge_testing.c  edge_threads.c  edge_threads_ext.c  edge_threads_posix.c  edge_threads_win.c  edge_uuid.c  edge_vector.c  edge_vmem.c  edge_vmem_posix.c  edge_vmem_win.c  fiber.cpp  fiber_asm_aarch64.asm  filesystem.cpp  filesystem_win.cpp  hash.cpp  json.cpp  random.cpp  scheduler.cpp  threads.cpp  uuid.cpp  vmem.cpp
lib/coro/: CMakeLists.txt  LICENSE  README.md
lib/coro/cmake/: edgeCoroConfig.cmake.in  edge_coro.pc.in
lib/coro/examples/: CMakeLists.txt  example_generator.c  example_generator.cpp  example_pipeline.c  example_pipeline.cpp  example_scheduler.c  example_scheduler.cpp
lib/coro/include/: coro.hpp  edge_coro.h  edge_fiber.h  edge_scheduler.h  fiber.hpp  scheduler.hpp
lib/coro/src/: coro.cpp  edge_coro.c  edge_coro_asm_aarch64.S  edge_coro_asm_x64_sysv.S  edge_coro_asm_x64_win.S  edge_coro_internal.h  edge_fiber.c  edge_scheduler.c  fiber.cpp  fiber_asm_x64_sysv.S  fiber_asm_x64_win.S  scheduler.cpp
lib/http/: CMakeLists.txt  LICENSE  README.md
lib/http/cmake/: edgeHttpConfig.cmake.in  edge_http.pc.in
lib/http/examples/: CMakeLists.txt  example.c  example_basic.c
lib/http/include/: edge_http.h  edge_http_websocket.h
lib/http/src/: edge_http.c  edge_http_websocket.c
lib/image/: CMakeLists.txt
lib/image/examples/: CMakeLists.txt  image_sample.cpp
lib/image/include/: image.hpp
lib/image/src/: dds_image.hpp  image.cpp  image_format.hpp  internal_image.hpp  ktx_image.hpp
lib/json/: CMakeLists.txt  LICENSE
lib/json/cmake/: edgeJsonConfig.cmake.in  edge_json.pc.in
lib/json/include/: edge_json.h  json.hpp
lib/json/src/: edge_json.c  edge_json_internal.h  edge_json_parser.c  edge_json_serializer.c  json.cpp  json_parser.cpp  json_serializer.cpp
lib/json/tests/: CMakeLists.txt  test_edge_json.c  test_edge_json.cpp
lib/logger/: CMakeLists.txt
lib/logger/cmake/: edgeLoggerConfig.cmake.in  edge_logger.pc.in
lib/logger/include/: edge_logger.h  logger.hpp
lib/logger/src/: edge_logger.c  edge_logger_debug_output.c  edge_logger_file_output.c  edge_logger_internal.h  edge_logger_logcat_output.c  edge_logger_stdout_output.c  logger.cpp  logger_debug_output.cpp  logger_file_output.cpp  logger_logcat_output.cpp  logger_stdout_output.cpp
lib/tar/: CMakeLists.txt  LICENSE  README.md
lib/tar/cmake/: edgeTarConfig.cmake.in  (+1 more)
lib/zip/: CMakeLists.txt  LICENSE  README.md
source/graphics/: CMakeLists.txt  gfx_context.cpp  gfx_context.h  gfx_interface.h  gfx_renderer.cpp  gfx_renderer.h  gfx_uploader.cpp  gfx_uploader.h
tools/shader_compiler/: CMakeLists.txt  main.cpp  test_shader.slang
(+128 files in other folders)
